--- a/book_eu/02.md
+++ b/book_eu/02.md
@@ -4,7 +4,7 @@ Hasieran esan bezala, ordenagailuak oso tentelak dira. Esaten zaiena egiten dute
 
 Ordenagailu baten zeregin ohikoenetako bat agindu bat errepikatzea da. Hori begizta egituren bidez lor daitekeen zerbait da. Begizta ekintza errepikatu bat da. Oro har, begizta batek baldintza bat betetzen du exekutatzeko: baldintza horiek betetzen badira, orduan begizta horrek dituen aginduak exekutatuko dira.
 
-Begiztak errusiar mendiak bezalakoak dira, non buelta batzuk ematen dituzun.
+Begiztak errusiar mendiak bezalakoak dira, non zirkuitu itxi batean buelta batzuk ematen dituzun.
 Jarraian, begizta mota desberdinak ikusiko ditugu.
 
 ## while begizta
@@ -38,7 +38,7 @@ Oharra: Kontuz! Konturatu al zara begiztaren barruan kontagailuari balio bat ken
 
 2.0 Ariketa
 
-Sortu 0n hasitako kontagailu aldagai bat definituko duen programa. Ondoren, idatzi while begizta bat. Kontagailua 5 baino txikiagoa den bitartean, erakutsi mezu hau: `"Begizta barruan nago"` kontagailu 1.
+Sortu `0`n hasitako kontagailu aldagai bat definituko duen programa. Ondoren, idatzi while begizta bat. Kontagailua `5` baino txikiagoa den bitartean, erakutsi mezu hau: `"Begizta barruan nago"`.
 
 ```python
 kontagailua = 0
@@ -97,14 +97,14 @@ Sartu maximo bat: 8
 
 ## For begizta
 
-`for` begizta ekintza bat errepikatzeko erabiltzen dugu ere. Baldintza bat baino gehiago, kontagailu moduko bat erabiltzen du:
+`for` begizta ekintza bat errepikatzeko ere erabiltzen dugu. Baldintza bat baino gehiago, kontagailu moduko bat erabiltzen du:
 
 ```python
 for *aldagaia* in *tartea*:
   *eragiketak*
 ```
 
-Adibidez, honako begizta honek "hola" mezua 4 aldiz erakutsiko du:
+Adibidez, honako begizta honek `"Kaixo"` mezua 4 aldiz erakutsiko du:
 
 ```python:
 for i in range (4):
@@ -120,14 +120,14 @@ Kaixo
 Kaixo
 ```
 
-For begiztetan oso interesgarria den zerbait da `i` aldagaiak dira, nahi dugun izena izan lezakeenak, begiztaren buelta bakoitzari dagokion balioa izango duena. Hobeto ikusteko, nahikoa da aurreko programa pixka bat aldatzea:
+For begiztetan oso interesgarria den zerbait `i` aldagaiak dira, nahi dugun izena izan lezakeenak, begiztaren buelta bakoitzari dagokion balioa izango duena. Hobeto ikusteko, nahikoa da aurreko programa pixka bat aldatzea:
 
 ```python:
 for i in range (4):
   print ("Kaixo", i)
 ```
 
-Eta emaitzan ikusiko dugu nola `i` aldatzen den:
+Eta emaitzan ikusiko dugu nola  aldatzen den `i` hori:
 
 ```console
 Kaixo 0
@@ -140,7 +140,7 @@ Hori baliagarria izan daiteke programa askotan.
 
 2.2 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, 0tik 10era biderkatzeko taula erakusten duena.
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, `0`tik `10`era biderkatzeko taula erakusten duena.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -164,7 +164,7 @@ Sartu zenbaki bat: 3
 
 2.3 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. 0 edo txikiagoa bada, zerbait handiagoa sartzeko adierazi behar duzu, eta bestela, `"Python ondo dago!"` mezua erakutsi behar duzu pantailan, zenbakiak adierazten duen adina aldiz:
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. `0` edo txikiagoa bada, zerbait handiagoa sartzeko adierazi behar duzu, eta bestela, `"Python ondo dago!"` mezua erakutsi behar duzu pantailan, zenbakiak adierazten duen adina aldiz:
 
 ```python
 zenbakia = input("Sartu zenbaki bat: ")
@@ -188,9 +188,9 @@ Python ondo dago!
 
 ## Tartea aldatu
 
-Lehenetsita, `range (4)` 0tik 3ra bitarteko zerrenda itzultzen ari da, hau da: 0, 1, 2, 3. Lau elementu dira guztira eta, beraz, begiztak lau buelta emango ditu.
+Lehenetsita, `range (4)` `0`tik `3`ra bitarteko zerrenda itzultzen ari da, hau da: 0, 1, 2, 3. Lau elementu dira guztira eta, beraz, begiztak lau buelta emango ditu.
 
-Jakina, edozein maila mota sor daiteke. Ezer adierazten ez bada, tartea 0an hasten da. Baina bi zenbakiren arteko tartea adieraz daiteke:
+Jakina, edozein maila mota sor daiteke. Ezer adierazten ez bada, tartea `0`an hasten da. Baina bi zenbakiren arteko tartea adieraz daiteke:
 
 ```python
 range (0, 4) # 0, 1, 2, 3
@@ -213,7 +213,7 @@ Kaixo 7
 Kaixo 8
 ```
 
-Hirugarren parametro bat ere adieraz daiteke, balio batetik bestera nola egiten den jauzi adierazteko. Adibidez, 1tik 11ra, salto bikoitza emanez:
+Hirugarren parametro bat ere adieraz daiteke, balio batetik bestera nola egiten den jauzi adierazteko. Adibidez, `1`tik `11`ra, salto bikoitza emanez:
 
 ```python
 range (1, 11, 2) # 1, 3, 5, 7, 9
@@ -256,7 +256,7 @@ Hona hemen emaitza:
 
 2.4 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, erabiltzaileak sartu duen zenbakira arteko zenbaki bikoiti guztiak erakutsi behar ditu, 0tik hasieta Erabili `for` begizta eta egin salto binaka.
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, erabiltzaileak sartu duen zenbakira arteko zenbaki bikoiti guztiak erakutsi behar ditu, `0`tik hasieta Erabili `for` begizta eta egin salto binaka.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -295,7 +295,7 @@ lorea
 
 ## Begiztatik irteten
 
-Batzuetan, baliteke begizta batetik irten eta beste ezer prozesatzen ez jarraitzea. Demagun zerrenda baten barruan izen bat bilatzeko programa bat dugula:
+Batzutan, baliteke begizta batetik irten eta beste ezer prozesatzen ez jarraitzea. Demagun zerrenda baten barruan izen bat bilatzeko programa bat dugula:
 
 ```python
 izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
@@ -303,7 +303,7 @@ for izena in izenak:
   if izena == "Ane":
     print ("Ane zerrendan dago")
 ```
-Programa horren arazoa da, nahiz eta `Ane` aurkitu, begiztak zerrendaren amaierara arte jarraituko duela. Zerrenda hori oso handia bada, gure programa ez da eraginkorra izango! Hau da, denbora galtzen ibiliko da. Hasieran esan bezala, ordenagailuak oso tentelak dira. Gelditzeko esaten ez badiegu, aurrera jarraituko dute.
+Programa honek arazo bat dauka: nahiz eta `Ane` aurkitu, begiztak zerrendaren amaierara arte jarraituko du. Zerrenda hori oso handia bada, gure programa ez da eraginkorra izango! Hau da, denbora galtzen ibiliko da. Hasieran esan bezala, ordenagailuak oso tentelak dira. Gelditzeko esaten ez badiegu, aurrera jarraituko dute.
 
 Zorionez, begiztetan `break` agindua erabil dezakegu, begizta bat-batean bukatzea lortuko duena:
 
@@ -317,7 +317,7 @@ for izena in izenak:
 
 2.5 Ariketa
 
-Idatzi 3 zenbakidun zerrenda bat definitzen duen programa bat. Ondoren, sortu `for` begizta bat, zerrenda gainditu eta zenbakiak adierazten duen beste aldiz errepikatuko duena.
+Idatzi 3 zenbakidun zerrenda bat definitzen duen programa bat. Ondoren, sortu `for` begizta bat, zerrenda zeharkatu eta zenbaki bakoitza bezain beste aldiz pantailatik `"Python"` hitza ateratzen duena.
 
 ```python
 errepikatu = [3, 6, 2]
@@ -339,17 +339,17 @@ Python
 
 ## Noiz erabili `while` ala `for`?
 
-Biekin gauza bera egin zenezakeen arren, bakoitzak erabilera logikoagoa du.
+Biekin gauza bera egin zenezakeen arren, bakoitzak erabilera berezia du.
 
 `for` begizta buelta kopuru zehatza exekutatu nahi denean erabiltzen da, ez gehiago, ez gutxiago. Edo, aurrerago ikusiko dugun bezala, datu-egiturak hasieratik amaierarainoko zerrendek kudeatu nahi direnean.
 
-`while` begiztak ordez, baldintzak oso zehatzak ez direnean erabil daiteke. Adibidez, erabiltzaileak datu bat sartzea nahi badugu, begizta batean sar dezakegu. Begizta ez da amaituko erabiltzaileak datu on bat sartu arte (hori litzateke baldintza).
+`while` begiztak ordez, baldintzak oso zehatzak ez direnean erabil daitezke. Adibidez, erabiltzaileak datu bat sartzea nahi badugu, begizta batean sar dezakegu. Begizta ez da amaituko erabiltzaileak datu on bat sartu arte (hori litzateke baldintza).
 
 ## Proposatutako ariketak
 
 2.0 Ariketa
 
-Idatzi programa bat `while` begizta batekin, erabiltzaileari izen bat eskatzeko (adibidez, `"Ada"`) eta `"Kaixo Ada"` izen hori agurtzeko. `"irten"` testua sartuz gero, buklea amaitu egin behar da.
+Idatzi programa bat `while` begizta batekin, erabiltzaileari izen bat eskatzeko (adibidez, `"Ada"`) eta `"Kaixo Ada"` izen hori agurtzeko. `"irten"` testua sartuz gero, begizta amaitu egin behar da.
 
 ```python
 izena = ""
@@ -376,7 +376,7 @@ Amaiera.
 
 2.1 Ariketa
 
-Idatzi programa bat, erabiltzaileari zenbaki bat eskatzen dion eta zenbakia 0 ez den bitartean amaitzen ez duen `while` begizta duena. Zenbakia sartu ondoren, agur bat erakutsi behar da zenbakiak adierazten duen adina aldiz. Zenbakia 0 baino txikiagoa bada, begizta `break` batekin amaitu behar da;
+Idatzi programa bat, erabiltzaileari zenbaki bat eskatzen diona eta zenbakia `0` ez den bitartean amaitzen ez duen `while` begizta duena. Zenbakia sartu ondoren, agur bat erakutsi behar da zenbakiak adierazten duen adina aldiz. Zenbakia `0` baino txikiagoa bada, begizta `break` batekin amaitu behar da;
 
 ```python
 balioa = ""
@@ -403,14 +403,14 @@ Sartu zenbaki bat: -1
 
 2.2 Ariketa
 
-Sortu erabiltzaileari balio oso bat eskatzen dion programa bat, egiaztatu 0 baino handiagoa den eta, gainera, bikoitia den. Hala bada, bistaratu pantailan `*` karakterea zenbakiaren balioa adina aldiz. Erabili `print ("*")`.
+Sortu erabiltzaileari balio oso bat eskatzen dion programa bat, egiaztatu `0` baino handiagoa dela eta, gainera, bikoitia dela. Hala bada, bistaratu pantailan `*` karakterea zenbakiaren balioa adina aldiz. Erabili `print ("*")`.
 Adibidez, 8 sartuz gero, hau erakutsiko du:
 
 ```console
 *******
 ```
 
-Sartutako balioak baldintzak betetzen ez baditu, erabiltzaileari ohartarazteko mezu bat erakutsi behar diozu eta programa amaitu.
+Sartutako balioak baldintzak betetzen ez baditu, erabiltzailea ohartarazteko mezu bat erakutsi behar diozu eta programa amaitu.
 
 ```python
 zenbakia = input("Sartu zenbaki bat: ")
@@ -516,7 +516,7 @@ Sartu zenbaki bat: 2
 
 2.5 Ariketa
 
-Sortu programa bat erabiltzaileari zenbaki oso bat eskatu eta haren faktoria kalkulatzeko. Adibidez, 5eko faktoria 5 x 4 x 3 x 2 x 1 = 120 izango litzateke.
+Sortu programa bat erabiltzaileari zenbaki oso bat eskatu eta haren faktoria kalkulatzeko. Adibidez, `5` zenbakiaren faktoria `5 x 4 x 3 x 2 x 1 = 120` izango litzateke.
 
 ```python
 zenbakia = input("Sartu zenbaki bat: ")
@@ -542,7 +542,7 @@ Emaitza: 24
 
 2.6 Ariketa
 
-Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu zenbaki hori primoa den ala ez, hau da, bakarrik bere buruarekin edo 1egatik zatigarria den. Adibidez: 2, 3, 5, 7, 11, 13, 17,...
+Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu zenbaki hori lehena (primoa) den ala ez, hau da, bakarrik bere buruarekin edo `1`egatik zatigarria dena. Adibidez: 2, 3, 5, 7, 11, 13, 17,...
 
 ```python
 zenbakia = input("Sartu zenbaki bat: ")
@@ -577,7 +577,7 @@ Sartu zenbaki bat: 5
 
 2.7 Ariketa
 
-Sortu 0tik 10era biderketa taula guztiak erakusten dituen programa bat.
+Sortu `0`tik `10`era biderketa taula guztiak erakusten dituen programa bat.
 
 ```python
 for i in range(11):
