--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -1,12 +1,12 @@
 # Datu egiturak
 
-Orain arte datu sinpleekin, zenbaki bat, testu bat eta abar duten aldagaiekin jolasten aritu gara. Baina badira datu konplexuagoak sortzeko aukera ematen diguten beste datu mota batzuk ere: datu soil bat baino zerbait gehiago eduki dezakete.
+Orain arte datu sinpleak erabili ditugu. Zenbaki bat, testu bat eta abar duten aldagaiekin jolasten aritu gara. Baina badira datu konplexuagoak sortzeko aukera ematen diguten beste datu mota batzuk ere: datu bakar bat baino zerbait gehiago eduki dezakete.
 
 Ordenagailu programek oso gauza zailak egin ditzakete, baina, funtsean, datuak prozesatzen dituzte. Eta askotan, datu horiek sekuentzia luzeetan datoz. Jarraian, datu mota horietako batzuk ikusiko ditugu.
 
 ## Zerrendak
 
-Zerrendak zenbakiz indexatutako datu-multzo bat dira. Hori da definizio oso formala, baina izenak berak esaten dizu zer diren: zerrenda bat! Datu motei buruzko kapituluan zerrendak aurkeztu genituen eta nola sortzen diren ikusi genuen:
+Zerrendak zenbakiz indexatutako datu-multzo bat dira. Hori definizio oso formala da, baina izenak berak esaten dizu zer diren: zerrenda bat! Datu motei buruzko kapituluan zerrendak aurkeztu genituen eta nola sortzen diren ikusi genuen:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
@@ -44,7 +44,7 @@ Emaitza:
 
 ## Zerrenden luzera
 
-Zerrenda baten luzera jakiteko, `len ()` funtzioa erabil daiteke:
+Zerrenda baten luzera jakiteko, `len()` funtzioa erabil daiteke:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
@@ -106,7 +106,7 @@ zenbakiak[-1]  # [9]
 
 ## Elementuak gehitu eta ezabatu
 
-Zerrenda bati elementu bat gehitu nahi badiogu, nahikoa da funtzio hau erabiltzea:
+Zerrenda bati elementu bat gehitu nahi badiogu, nahikoa da `append` funtzioa erabiltzea:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
@@ -122,7 +122,7 @@ del hizkuntzak[1]
 print (hizkuntzak) # ["Ingelesa", "Frantsesa"]
 ```
 
-Azken elementoa kentzeko, `pop` funtzioa ere erabil daiteke. Honek elementua kentzen du eta itzultzen du:
+Azken elementua kentzeko, `pop` funtzioa ere erabil daiteke. Honek elementua kentzen du eta itzultzen du:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
@@ -146,7 +146,7 @@ for hizkuntza in hizkuntzak:
     print (hizkuntza)
 ```
 
-Indizea erabiliz ere egin daiteke zerrenda. Horretarako, `range` funtzioa erabili beharko dugu, eta zerrendaren luzera eman beharko diogu, `len' erabiliz:
+Indizea erabiliz ere zeharkatu daiteke zerrenda. Horretarako, `range` funtzioa erabili beharko dugu, eta zerrendaren luzera eman beharko diogu, `len` erabiliz:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
@@ -160,7 +160,7 @@ Beste lengoai batzuetan, zerrendei `array` esaten zaie. Testuan zehar hitz desbe
 
 3.2 Ariketa
 
-Definitu izenen zerrenda bat, erakutsi pantaila bidez. Gehitu elementu bat eta erakutsi zerrenda pantailaz pantaila. Ondoren, zerrendatik elementu bat ezabatu eta zerrenda pantailaz pantaila erakusten du.
+Definitu izenen zerrenda bat eta erakutsi pantaila bidez. Gehitu elementu bat eta erakutsi zerrenda osoa pantailan. Ondoren, zerrendatik elementu bat ezabatu eta berriro pantailan erakutsi zerrenda.
 
 ```python
 izenak = ["Ada", "Bug", "Neko"]
@@ -187,9 +187,9 @@ Emaitza:
 ## Hiztegiak
 
 Hiztegiak datu-multzoak dira, non elementu bakoitzak gako bat eta balio bat ditu.
-Beste era batera esanda, zerrenda bat bezalakoak dira, baina 0,1, 2... zenbaki-indizea izan beharrean, zuk nahi duzun balioa dute.
+Beste era batera esanda, zerrenda bat bezalakoak dira, baina 0, 1, 2... zenbaki-indizea izan beharrean, zuk nahi duzun balioa dute.
 
-Adibidez, hiztegi bat defini dezakegu, hainbat pertsonaren adinak biltzen dituena, non izena baita gakoa eta adina balioa:
+Adibidez, hiztegi bat defini dezakegu, hainbat pertsonaren adinak biltzen dituena, non izena gakoa den eta adina, balioa:
 
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
@@ -231,13 +231,13 @@ adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 
 print (adinak) # {'Ada': 14, 'Bug': 10, 'Neko': 2}
 
-adinak ["Miranda"] = 23;
+adinak["Miranda"] = 23;
 
-print (adinak) # {'Ada': 14, 'Bug': 10, 'Neko': 2, 'Miranda': 23}
+print(adinak) # {'Ada': 14, 'Bug': 10, 'Neko': 2, 'Miranda': 23}
 
 del adinak["Bug"]
 
-print (adinak) # {'Ada': 14, 'Neko': 2, 'Miranda': 23}
+print(adinak) # {'Ada': 14, 'Neko': 2, 'Miranda': 23}
 
 for izena in adinak.keys ():
   print (izena, adinak[izena])
@@ -281,8 +281,8 @@ del adinak["Bug"]
 print (adinak) # {'Ada': 14, 'Neko': 2}
 ```
 
-Eta hiztegiko balio guztiak ezagutu nahi baditugu?
-Ez dago arazorik, baina hiztegiaren gako guztiak itzuliko dizkigun funtzio bat erabili beharko dugu: `keys ()`. Honela litzateke:
+Eta hiztegiko balio guztiak erakutsi nahi baditugu?
+Ez dago arazorik, baina hiztegiaren gako guztiak itzuliko dizkigun funtzio bat erabili beharko dugu: `keys()`. Honela litzateke:
 
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
@@ -301,7 +301,7 @@ Neko 2
 3.5 Ariketa
 
 Erabili aurreko ataleko telefonoen hiztegia. Eskatu erabiltzaileari izen bat, eta gero kendu elementu hori hiztegitik.
-Amaieran, hiztegiko elementu guztiak erakusten ditu.
+Amaieran, hiztegiko elementu guztiak erakutsi.
 
 ```python
 telefonoak = {"Ada": 666555333, "Bug": 111000111 }
@@ -326,7 +326,7 @@ Beste hizkuntza batzuetan, hiztegiei `hash`, `hashtable` edo "mapak" esaten zaie
 
 ## Datu konbinatuen egiturak
 
-Oinarrizko egiturek, hala nola zerrendek eta hiztegiek, zerrendak eta hiztegiak ere izan ditzakete!
+Oinarrizko egiturek, hala nola zerrendek eta hiztegiek, zerrendak eta hiztegiak eduki  ditzakete habiatuta.
 
 Datu egitura habiatuak sor daitezke, behar bezain konplexuak. Demagun lagun baten datuak hiztegi honekin irudikatu nahi dituzula:
 
@@ -334,7 +334,7 @@ Datu egitura habiatuak sor daitezke, behar bezain konplexuak. Demagun lagun bate
 laguna = {"izena": "Neko", "adina": 2}
 ```
 
-Eta hainbat lagun izango dituen datu egitura bat izan nahi baduzu? Kasu horretan, hiztegien zerrenda egin dezakezu:
+Eta hainbat lagun izango dituen datu egitura bat sortu nahi baduzu? Kasu horretan, hiztegien zerrenda egin dezakezu:
 
 ```python
 lagunak = [
@@ -348,7 +348,7 @@ print (lagunak [2] ["izena"]) #Ada
 
 3.6 Ariketa
 
-Idatzi bezeroa izeneko hiztegi-zerrenda bat zehazten duen programa bat, gakoak dituena: izena, emaila eta adina. Programak zerrenda egin behar du eta bezero bakoitzaren izena eta adina erakutsi.
+Idatzi `bezeroak` izeneko hiztegi-zerrenda bat definitzen duen programa bat. Bezeroaren gakoak hauek lirateke: `izena`, `email` eta `adina`. Programak zerrenda egin behar du eta bezero bakoitzaren izena eta adina erakutsi.
 
 ```python
 bezeroak = [
@@ -381,6 +381,8 @@ Pedro 42
 Ana 37
 ```
 
+### Hiztegien hiztegia
+
 Eta joko baten egoera, pertsonaiak eta objektuak bilduko dituen datu-egitura bat nahi baduzu? Hiztegi habiatu bat egin nezake, non gakoa pertsonaiaren izena den:
 
 ```python
@@ -393,16 +395,16 @@ pantaila = {
 print (pantaila ["Luigi"] ["bizitza"]) # 7
 ```
 
-Baina nola dakit zer egitura mota diseinatu behar dudan? Nola erabiliko duzun arabera. Batzuetan denak ibili beharko dituzu, beste batzuetan elementu jakin bat eskuratu beharko duzu... zure programak eskatzen duenaren arabera, egitura jakin bat diseinatu beharko duzu, zure programa azkarrago joan dadin.
+Baina nola dakit zer egitura mota diseinatu behar dudan? Emango diozun erabileraren arabera. Batzuetan denak ibili beharko dituzu, beste batzuetan elementu jakin bat eskuratu beharko duzu... zure programak eskatzen duenaren arabera, egitura jakin bat diseinatu beharko duzu, zure programa azkarrago joan dadin. Orohar, egitura azkarrenak hiztegiak dira, batez ere elementu zehatzak atzitu nahi dugunean.
 
 # Testuak
 
-Testu datu mota, katea edo *string* ere deitua, funtsezkoa da programetan. Horregatik, erabilgarritasun asko ditu datu mota horiek errazago erabiltzeko.
+Testu datu mota, katea edo *string* ere deitua, funtsezkoa da programetan. Horregatik, funtzio laguntzaile asko ditu datu mota horiek errazago erabiltzeko.
 Jarraian, testuetarako baliagarriak diren zenbait funtzio ikusiko ditugu, baina, aurretik, testuari buruzko zerbait azaltzea komeni da:
 
 ## Testuak zerrendak dira
 
-Izan ere, ordenagailuarentzat, testu bat zerrenda bat bezalakoa da. Letra zerrenda (edo katea) honela tratatu dezakegu:
+Izan ere, ordenagailuarentzat, testu bat zerrenda bat bezalakoa da. Letra zerrenda (edo katea) honela erabil dezakegu:
 
 ```python
 testua = "Kaixo naiz Ada"
@@ -426,11 +428,11 @@ d
 a
 ```
 
-Testu baten luzera ere jakin dezakegu, `len ()` funtzioarekin:
+Testu baten luzera ere jakin dezakegu, `len()` funtzioarekin:
 
 ```python
 testua = "Neko miauka"
-len (testua) # 11
+len(testua) # 11
 ```
 
 Baina zalantzarik izanez gero, interesgarriena da testutik nahi dugun zatia atera dezakegula, hasiera eta amaiera adierazita:
@@ -518,8 +520,8 @@ Testu bat modu batean amaitzen den jakin nahi badugu, berriz, `endswith()` erabi
 
 ```python
 hitzak = "Python lengoaia ona da"
-acaba = hitzak .endswith ("da") #True
-acaba = hitzak .startswith ("da") #False
+acaba = hitzak.endswith ("da") #True
+acaba = hitzak.startswith ("da") #False
 ```
 
 ## Soberakinak ezabatu
@@ -530,21 +532,21 @@ Testuak zuriuneekin edo ezabatu nahi ditugun beste karaktere batzuekin has edo b
 
 ```python
 testua = "Espazioak ditut"
-garbia = testua.lstrip () # "Espazioak ditut"
+garbia = testua.lstrip() # "Espazioak ditut"
 ```
 
 `rstrip` delakoarekin, testuaren hasieran espazioak ezabatzen dira:
 
 ```python
 testua = "Espazioak ditut"
-garbia = testua.rstrip () # "Espazioak ditut"
+garbia = testua.rstrip() # "Espazioak ditut"
 ```
 
 Eta `strip` funtzioarekin bi aldeetako espazioak kenduko ditugu:
 
 ```python
 testua = "Espazioak ditut"
-garbia = testua.strip () # "Espazioak ditut"
+garbia = testua.strip() # "Espazioak ditut"
 ```
 
 Besterik ezean, espazioak kentzen dira, baina kendu nahi dugun edozein testu adieraz dezakegu:
@@ -565,9 +567,10 @@ garbia = testua.rstrip("\n")
 
 3.0 Ariketa
 
-Idatz ezazu 5 elementuko zerrenda bat hasten duen programa bat:
-- Zenbaki zerrenada (0ra hasitakoak).
-- Eskuz hasitako 5 izeneko zerrenda.
+Idatz ezazu 5 elementuko zerrenda bat hasieratzen duen programa bat:
+
+- 5 zenbaki zerrenda (`0` balioarekin).
+- 5 izenen zerrenda.
 - 5 boolear balioko beste bat (`True` balioarekin hasitakoak).
 
 ```python
@@ -609,7 +612,7 @@ Emaitza:
 
 3.2 Ariketa
 
-Idatzi zerrenda bat kudeatzeko programa bat, erabiltzaileari 4 aukera dituen menu bat erakusteko: (1) elementua sartu, (2) ezabatu, (3) erakutsi eta (4) irten. Menua erabiltzaileak 4. aukera sartzen ez duen bitartean erakutsi behar da. 1. aukera aukeratuz gero, edozein balioko `append` egingo da, 2 aukeratuz gero, `pop` egingo da, eta 3 aukeratuz gero, zerrendako edukia erakutsiko da.
+Idatzi zerrenda bat kudeatzeko programa bat, erabiltzaileari 4 aukera dituen menu batekin: `1` elementua sartu, `2` ezabatu, `3` erakutsi eta `4` irten. Menua erabiltzaileak `4`. aukera sartzen ez duen bitartean erakutsi behar da. `1` aukera aukeratuz gero, edozein balioko `append` egingo da, `2` aukeratuz gero, `pop` egingo da, eta `3` aukeratuz gero, zerrendako edukia erakutsiko da.
 
 ```python
 zenbakiak = []
@@ -650,7 +653,7 @@ Aukera ezazu: 3
 
 3.3 Ariketa
 
-Idatzi erabiltzaileari hitzak eskatu eta esaldi bat eraikitzeko kateatzen dituen programa bat, erabiltzaileak puntu bat idatzi arte (.). Orduan programak sortutako esaldia erakutsi beharko du. Erabiltzaileak ez badu ezer idazten, ez da ezer kateatu behar.
+Idatzi erabiltzaileari hitzak eskatu eta esaldi bat eraikitzeko hitzak kateatzen dituen programa bat, erabiltzaileak puntu bat idatzi arte (.). Azkenean programak sortutako esaldia erakutsi beharko du. Erabiltzaileak ez badu ezer idazten, ez da ezer kateatu behar.
 
 ```python
 izenburua = ""
@@ -700,7 +703,7 @@ Ada duzu izena, Tevergan jaio zinen 2006 urtean.
 
 3.5 Ariketa
 
-Idatzi erabiltzaileari esaldi bat eskatzen dion programa bat. Gero esaldi horretako hitz bat eskatu behar du, eta, ondorioz, programak esaldi bera itzuliko du letra larriz:
+Idatzi erabiltzaileari esaldi bat eskatzen dion programa bat. Gero esaldi horretako hitz bat eskatu behar du. Azkenkik, programak esaldi bera itzuliko du baina aukeratutako hitza letra larriz agertu beharko da:
 
 ```python
 esaldia = input("Idatzi esaldi bat: ")
@@ -791,7 +794,7 @@ Emaitza:
 
 3.8 Ariketa
 
-Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Ondoren, sortu begizta bat zerrendan elementuren bat errepikatuta dagoen bilatzko. Errepikatutako bat aurkitzea nahikoa da.
+Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Ondoren, sortu begizta bat zerrendan elementuren bat errepikatuta dagoen bilatzeko. Errepikatutako bat aurkitzea nahikoa da.
 
 ```python
 numeruak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
@@ -821,7 +824,7 @@ Zenbaki bat errepikatuta dago
 
 3.9 Ariketa
 
-Sortu 10 zenbaki osorekin hasitako zerrenda bat definituko duen programa bat. Gero, beste begizta bat sortu, zenbaki positiboak, negatiboak eta 0 direnak zenbatuko dituena.
+Sortu 10 zenbaki osorekin hasitako zerrenda bat definituko duen programa. Gero, beste begizta bat sortu, zenbaki positiboak, negatiboak eta 0 direnak zenbatuko dituena.
 
 ```python
 zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, -9, 8, 3]
@@ -853,7 +856,7 @@ Zeroak: 1
 
 3.10 Ariketa
 
-Sortu 5x10 elementuko bi dimentsioko zerrenda bat definituko duen programa bat. Zerrendako balioak ausazko zenbakiak erabiliz hasten dituen begizta bat sortzen du.
+Sortu 5x10 elementuko bi dimentsioko zerrenda bat definituko duen programa bat. Zerrendako balioak ausazko (aleatorio edo _random_) zenbakiak erabiliz hasten dituen begizta bat sortzen du.
 Zenbaki aleatorioak sortzeko, `random` eta `random.randint()` funtzioa erabiltzen du liburutegiak, hemen erakusten den bezala:
 
 ```python
@@ -885,7 +888,7 @@ for i in range(len(matrizea)):
 
 3.11 Ariketa
 
-Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen programa bat. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak lekuz aldatzen aldatzen ditu, indizeetan `random` metodoa erabiliz. Gero emaitza erakusten du.
+Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen programa. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak lekuz aldatzen aldatzen ditu, indizeetan `random` funtzioa erabiliz. Gero emaitza erakusten du.
 
 ```python
 import random
