--- a/book_eu/04.md
+++ b/book_eu/04.md
@@ -1,15 +1,15 @@
 # Funtzioak
 
-Funtzioak programen barruan dauden programa txikiak dira. Adibidez, funtzio horrek pantailan agur bat besterik ez du ateratzen:
+Funtzioak programen barruan dauden programa txikiak dira. Adibidez, funtzio honek pantailan agur bat besterik ez du ateratzen:
 
 ```python
 def agurra ():
   print "Kaixo"
 ```
 
-Ikus daitekeenez, funtzio bat definitzeko `def`, 'hitza erabiltzen da, eta, ondoren, funtzioaren izena, kasu honetan, `agurra` eta `()` parametroen zerrenda, kasu honetan hutsik dagoena. Funtzioaren barruan, nahi ditugun aginduak jar ditzakegu.
+Ikus daitekeenez, funtzio bat definitzeko `def`, hitza erabiltzen da, eta, ondoren, funtzioaren izena `agurra` eta `()` parametroen zerrenda, kasu honetan hutsik dagoena. Funtzioaren barruan, nahi ditugun aginduak jar ditzakegu.
 
-Eta Pythonen estiloarekin jarraituz, funtzioaren barruan dagoen kodearen aurretik tabulazioa edo espazioak daudela ikusten da.
+Eta Pythonen estiloarekin jarraituz, funtzioaren barruan dagoen kodearen aurretik tabulazioa edo espazioak daudela kontutan hartu behar da.
 
 Funtzio hori definitu ondoren, funtzio hori erabiltzen (edo deitzen) dugun bakoitzean, funtzio horretan dagoen kodea exekutatuko da:
 
@@ -78,7 +78,7 @@ Kaixo Ada
 
 4.1 Ariketa
 
-Idatz ezazu programa bat `karratua` izeneko funtzio batekin, eta parametro hau izango du: funtzioak emaitza biderkatu eta pantaila bakoitzean erakutsi behar du.
+Idatz ezazu programa bat `karratua` izeneko funtzio batekin, parametro bat izango duena. Funtzioak parametroa bere buruarekin biderkatu (karratua) eta pantaila bakoitzean erakutsi behar du.
 
 ```python
 def karratua(a):
@@ -116,7 +116,7 @@ Kaixo Neko
 Kaixo Neko
 ```
 
-Aldiz, bigarren parametroa pasatzen ez badugu, `aldiz`ek lehenetsitako balioa hartuko du:
+Aldiz, bigarren parametroa pasatzen ez badugu, `aldiz`ek lehenetsitako balioa (`3`) hartuko du:
 
 ```python
 agurtu("Bug")
@@ -132,8 +132,8 @@ Kaixo Bug
 
 ## Parametro infinituak
 
-Python-en funtzioei esker, parametro kopuru zehaztugabea pasatzeko aukera daukazu. Arraro samarra dirudi, baina baliagarria da.
-Imajinatu funtzio bat sortu nahi duzula, pasatzen dizkiozun parametro guztiak batuko dituena.
+Python-en funtzioei esker, parametro kopuru zehaztugabea pasatzeko aukera daukazu. Arraro samarra dirudi, baina baliagarria izan daiteke.
+Imajinatu funtzio bat sortu nahi duzula, pasatzen dizkiozun parametro guztiak batuko dituena:
 
 ```python
 def batu (*balioak):
@@ -145,7 +145,7 @@ def batu (*balioak):
   return emaitza
 ```
 
-Erreparatzen baduzu, `balioak` parametroa zehaztu dugu, aurretik `*` bat jarrita. Horrekin esan nahi dizugu ez dela parametro bakarra, edozein luzera izan dezakeen zerrenda baizik.
+Erreparatzen baduzu, `balioak` parametroa zehaztu dugu, aurretik `*` bat jarrita. Horrekin esan nahi dugu ez dela parametro bakarra, edozein luzera izan dezakeen zerrenda baizik.
 
 Beraz, funtzio horri honela deitu al diogu:
 
@@ -156,7 +156,7 @@ batu (2, 45) # 47
 
 4.2 Ariketa
 
-Idatz ezazu programa bat parametro mugagabeak edo dinamikoak jasotzen dituen `hitzak_batu` izeneko funtzio batekin. Batzeko funtzioak parametroak hartu behar ditu, eta horiekin guztiekin testu bat itzuli, esaldi bat osatuz.
+Idatz ezazu programa bat parametro mugagabeak edo dinamikoak jasotzen dituen `hitzak_batu` izeneko funtzio batekin. Hitzak batzeko funtzioak parametroak hartu behar ditu, eta horiekin guztiekin testu bat itzuli, esaldi bat osatuz.
 
 ```python
 def hitzak_batu(*hitza):
@@ -174,7 +174,7 @@ print(hitzak_batu("kaixo", "zer", "moduz"))
 Emaitza:
 
 ```console
-Kaixo, zer moduz?
+Kaixo zer moduz
 ```
 
 ## Balioak itzultzen: `return`
@@ -254,7 +254,7 @@ def berredura (kopurua, aldiz):
 
 ## Dei kabituak
 
-Ez izan funtzio-deiei habia egiteko beldurrik. Oso gauza naturala da programazioan.
+Ez izan funtzio dei kabiatuak egiteko beldurrik. Oso gauza naturala da programazioan.
 Imajinatu erabiltzaileari zenbaki bat eskatzeaz arduratzen den funtzio hau dugula eta sartutako zenbaki itzultzen duela:
 
 ```python
@@ -278,13 +278,13 @@ print (kenketa(irakur_zenbakia(), irakur_zenbakia()))
 
 Zenbaki edo aldagai bat parametro gisa jarri beharrean, dei bat jar diezaiokegu funtzio bati.
 
-Funtzio horiek `irakur_zenbakia ()` , balio batzuk itzuliko dituzte. Lehenengo `irakur_zenbakia()` deitu bezain laster, honela izango da:
+Funtzio horiek `irakur_zenbakia()`, balio batzuk itzuliko dituzte. Lehenengo `irakur_zenbakia()` deitu bezain laster, honela izango da:
 
 ```python
 print (kenketa(5, irakur_zenbakia()))
 ```
 
-Eta gero, bigarrenari `irakur_zenbakia ()` deitu ondoren:
+Eta gero, bigarrenari `irakur_zenbakia()` deitu ondoren:
 
 ```python
 print (kenketa(5, 2))
@@ -304,13 +304,13 @@ Eta, azkenik, `print` deituko da eta emaitza ikusiko dugu:
 
 4.4 Ariketa
 
-Idatzi bi funtzio. Zenbaki bat jaso eta zenbaki bera positiboan itzultzen duena.
+Idatzi bi funtzio. zenbaki bat jaso eta zenbaki bera positiboan itzultzen duena.
 
 `positibo(balioa)`
 
 Eta bi zenbaki jaso eta horien arteko potentzia kalkulatzen duen beste funtzio bat.
 
-`potentzia (balio1, balio2)`
+`berredura(balio1, balio2)`
 
 Bigarren funtzioari deitu behar diozu, parametro hauek kontuan hartuta:
 
@@ -353,7 +353,7 @@ Hori ondo dago programak sinpleak direnean eta gauza gutxi egin behar dituztenea
 
 ### 0 arrazoia: zatitu eta irabaziko duzu
 
-Programak arazoak konpontzen saiatzen dira, soluzio bat eskainiz. Batzuetan arazoak oso konplexuak izan daitezke. Funtzioek arazo horiei zatika heltzeko aukera ematen dizute. Funtzio bakoitzak arazoaren zati baterako konponbidea eman diezazuke. Beraz, arazoa arazo txiki askotan bana dezakezu eta arazo bakoitza funtzio batekin konpon dezakezu.
+Programak arazoak konpontzen saiatzen dira, soluzio bat eskainiz. Batzuetan arazoak oso konplexuak izan daitezke. Funtzioek arazo horiei zatika heltzeko aukera ematen dizute. Funtzio bakoitzak arazoaren zati baterako konponbidea eman diezazuke. Beraz, arazo handia arazo txiki askotan bana dezakezu eta arazo bakoitza funtzio batekin konpon dezakezu.
 Programak funtzioetan banatzea programa konplexuagoak diseinatzeko lehen urratsa da.
 
 ###  1. arrazoia: kodea ez errepikatzea
@@ -372,7 +372,7 @@ while datua == "":
 Erabiltzaileari 3 datu eskatzen badizkiozu, kode hori 3 aldiz errepikatu beharko zenuke! Aldiz, kode bera duen funtzio bat sortzen baduzu, behin bakarrik idatzi beharko duzu, eta gero behar adina aldiz erabili ahal izango duzu.
 
 Oharra: kodea ez errepikatzea da programatzaile on orok jarraitu beharreko araurik garrantzitsuenetako bat.
-**"3aren araua"** ere aplika dezakezu. Zerbait errepikatu behar duzun hirugarren aldian, automatizatu egin behar duzu.
+**"3aren araua"** ere aplika dezakezu. Zerbait errepikatu behar duzun hirugarren aldian, automatizatu edo funtzio biurtu egin behar duzu.
 
 ###  2. arrazoia: berrerabili kodea
 
@@ -402,22 +402,22 @@ Aupa
 
 ###  3. arrazoia: mantentze lanak erraztea
 
-Kodea leku bakar batean badago, errazagoa da zuzentzea, aldatzea, hobetzea eta orokorrean mantentzea. Programa bat zerotik sortzea oso polita da, baina benetako lana kodea denboran zehar mantentzea da.
-Gure funtzioak ondo zehaztuak baditugu, lana PIIIIILA aurreztuko dugu.
+Kodea leku bakar batean badago, errazagoa da zuzentzea, aldatzea, hobetzea eta orokorrean mantentzea. Programa bat zerotik sortzea oso polita da, baina programatzaileen benetako lana kodea denboran zehar mantentzea da.
+Gure funtzioak ondo diseinatuak baditugu, lana PIIIIILA aurreztuko dugu.
 
 ### 4. arrazoia: testak egiteko aukera ematen du
 
-Agian gazte samarra zara honetarako, baina nik bezala gure programak probatzen ditugu. Zer esan nahi du horrek? Gure programek behar dutena egiten dutela egiaztatzea helburu bakarra duten programak idazten ditugula.
+Agian gazte samarra zara honetarako, baina profesional onek programak probatzen dituzte. Zer esan nahi du horrek? Beraien programek behar dutena egiten dutela egiaztatzea helburu bakarra duten programak idazten dituztela.
 Zure kodeak funtzioak baditu, testak idatzi ahal izango dituzu funtzio horiek behar dutena egiten dutela egiaztatzeko.
 
-Berez, aditua zarenean, zure eginkizuna bera baino lehen testa idaztea da zure betebeharra.
+Berez, aditua zarenean, zure eginkizuna bera baino lehenago... testa idaztea da zure betebeharra!
 
 ## Nola egin funtzio onak
 
-Edonork idatz ditzake funtzioak eta kodea zati txikitan antolatu. Baina pro gisa funtzioak idatzi nahi badituzu, honako hau lortu behar duzu:
+Edonork idatz ditzake funtzioak eta kodea zati txikitan antolatu. Baina _pro_ gisa funtzioak idatzi nahi badituzu, honako hau lortu behar duzu:
 
 - Funtzio batek gauza bakarra egin behar du. Hobe da funtzio txiki asko izatea, gauza asko egiten dituzten funtzio gutxi izatea baino. Zure funtzioa pantailan sartzen ez bada edo 24 lerro gainditzen baditu, agian zati txikitan banatu beharko duzu.
-- Funtzio batek ez luke kanpoan dagoen ezer aldatu behar. Ezustekorik izan nahi ez baduzu, funtzio batek ez luke programaren barruan ezustekorik behar.
+- Funtzio batek ez luke bere kanpoan dagoen ezer aldatu behar. Ezustekorik izan nahi ez baduzu, funtzio batek ez luke programaren barruan ezustekorik eragin behar.
 - Funtzio batek zerbait itzuli beharko luke, eta horrek beti berdina izan beharko luke parametro jakin batzuetarako.
 
 ## Proposatutako ariketak
@@ -480,7 +480,7 @@ Eragiketa ezezaguna
 
 4.2 Ariketa
 
-`def saludo (momentua)`
+`def agurtu (momentua)`
 
 Funtzio honek parametro gisa eguneko une bat hartzen du: `"goizean"`, `"arratsaldean"` edo `"gauean"`, eta dagokion agurra itzuli behar du: `"Egun on"`, `"Arratsalde on"`, eta `"Gabon"`, hurrenez hurren.
 
@@ -519,7 +519,7 @@ Arratsalde on.
 
 `hasiZenbakiarekin (luzera, zenbakia)`
 
-Funtzio honek array zenbakien elementu guztiak parametro gisa pasatzen dugun zenbakiarekin hasi behar ditu.
+Funtzio honek array bat sortu behar du, bi parametroak kontutan hartuz: `luzera` zenbaki kopuruarekin, eta zenbaki guztiak `zenbakia` balioarekin bete behar dira.
 
 ```python
 def hasieratuZenbakiarekin(luzera, zenbakia):
@@ -545,7 +545,7 @@ Emaitza:
 
 `def ausazkoa (max)`
 
-Funtzio horrek 0 eta parametro gisa pasatzen den gehieneko balioaren arteko ausazko (random) zenbaki bat itzuli behar du.
+Funtzio horrek `0` eta parametro gisa pasatzen den gehieneko balioaren arteko ausazko (random) zenbaki bat itzuli behar du.
 
 ```python
 import random
@@ -566,7 +566,7 @@ Emaitza:
 
 `izenaSortu(silabak)`
 
-Silaba kopuru bat dela eta, ausazko izen bat sortzen duen funtzio bat (kontsonanteak eta bokalak txandakatu). Aurreko ekitaldiko funtzioa erabil dezakezu.
+Silaba kopuru bat dela eta, ausazko izen bat sortzen duen funtzio bat idatzi (kontsonanteak eta bokalak txandakatu). Aurreko ariketako funtzioa erabil dezakezu.
 
 ```python
 import random
@@ -597,7 +597,7 @@ xamozu
 
 4.6 Ariketa
 
-`def pasahitzaSortu (luzera)`
+`def pasahitzaSortu(luzera)`
 
 Luzera bat emanda, zorizko karaktereak dituen string bat sortzen duen funtzioa. Karakteredun *string* array bat erabil dezakezu, eta ausazko karaktereak atera arraytik, izen bat sortzeko. Ausazko zenbakiak sortzeko `random.randint` funtzioa erabil dezakezu.
 
@@ -634,10 +634,10 @@ _! 5_flg $
 Sortu `faktura` izeneko funtzioa (produktuak, kantitateak, prezioak), tamaina bereko hiru array jasotzen dituena, honako eduki hauekin:
 
 1. `produktuak`: produktuen izenak.
-2. `kantitateak`: zenbaki osoak, kantitatea adierazita.
-3. `prezioak`: zenbaki hamartarrak, produktu bakoitzaren prezioa adierazita.
+2. `kantitateak`: zenbaki osoak, kantitatea adierazteko.
+3. `prezioak`: zenbaki hamartarrak, produktu bakoitzaren prezioa adierazteko.
 
-Funtzioak produktu bakoitza aztertu eta guztizko prezioa kalkulatu behar du, kantitatearen eta prezioaren arabera. Produktu bakoitzaren guztizko prezio hori erakutsi behar da, eta programaren amaieran, batura osoaren prezioa erakutsi behar da.
+Funtzioak produktu bakoitza aztertu eta prezio osoa kalkulatu behar du, kantitatearen eta prezioaren arabera. Produktu bakoitzaren prezio osoa erakutsi behar da, eta programaren amaieran, batura osoaren prezioa erakutsi behar da.
 
 ```python
 def faktura(produktuak, kantitateak, prezioak):
@@ -677,11 +677,11 @@ Guztira: 4.0
 
 4.8 ariketa
 
-Hau zailagoa izango da. Jolasetako pertsonaiak sortzeko funtzio bat duen programa bat sortzen du.
+Hau zailagoa izango da. RPG jokuetako pertsonaiak sortzeko funtzio bat duen programa bat sortzen du.
 
 `def atributuakSortu (mailaKonpentsazioa)`
 
-Funtzio horrek hiru aldagai definitu behar ditu: indarra, abiadura eta adimena. Programak 20 puntu banatu behar ditu hiru aldagaien artean. Bestela esanda, hiru aldagaien artean 20 batu behar dira. `mailaKonpentsazioa` parametroak balio behar du puntu oso bereiziak edo berdinduak banatzen diren adierazteko, balio desorekatuena zenbat eta handiagoa izan, hau da, atributuen arteko aldea handiagoa da; nola egin programatzailearen kontua da.
+Funtzio horrek hiru aldagai definitu behar ditu: `indarra`, `abiadura` eta `adimena`. Programak `20` puntu banatu behar ditu hiru aldagaien artean. Bestela esanda, hiru aldagaien artean `20` batu behar dira. `mailaKonpentsazioa` parametroak balio behar du puntu oso bereiziak edo berdinduak banatzen diren adierazteko, balio desorekatuena zenbat eta handiagoa izan, hau da, atributuen arteko aldea handiagoa da; nola egin programatzailearen kontua da.
 
 Azkenean, programak esleitutako puntuen laburpena erakutsi behar du.
 
